feat: stabilize admin dashboard response shape with real metrics